# diffusiongemma-agent

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PYPI_README.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
configs/: aider.dg-fast.conf.yml  aider.dg-model-metadata.json  aider.dg-model-settings.yml  litellm.dg.yaml  opencode.dg-agent.json  opencode.dg-mcp.json  opencode.dg.json
desktop/: Build-DesktopInstaller.ps1  __init__.py  diffusiongemma_agent.spec  diffusiongemma_agent_gui.py  installer.nsi  version_info.txt
docs/: DISTRIBUTION.md  RELEASE_0.1.0.md  RELEASE_0.1.1.md  RELEASE_0.1.2.md  TROUBLESHOOTING.md  WINDOWS_DESKTOP.md  autogen_local.md  crewai_local.md  dg_agent_cli.md  goose_local.md  haystack_local.md  ide_client_profiles.md  langgraph_local.md  litellm_gateway.md  llamaindex_local.md  local_agent_stack.md  mcp_server.md  open_interpreter_local.md  opencode_local.md  oss_agent_wrappers.md  persistent_supervisor.md  portable_bundle.md  qwen_code_local.md  rag_agent.md  smolagents_local.md  stack_watchdog.md  windows_wsl_agent_runtime.md
portable/: Build-DiffusionGemmaAgentBundle.ps1  Install-DiffusionGemmaAgent.ps1  README.md  dg.ps1  start-runtime.sh
scripts/: aider_dg_proxy.py  check_iq4xs_fullgpu.sh  dg_agent.py  dg_agent.sh  dg_agent_capabilities.py  dg_autogen_runner.py  dg_crewai_runner.py  dg_haystack_runner.py  dg_langgraph_runner.py  dg_llamaindex_runner.py  dg_mcp_sdk_server.py  dg_mcp_server.py  dg_mini_swe_runner.py  dg_open_interpreter_runner.py  dg_openai_tool_loop.py  dg_persistent_supervisor.py  (+109 more)
(+37 files in other folders)
